# cozmeeq

./: .dockerignore  .env.example  .env.supabase.example  .gitignore  CONTRIBUTING.md  Dockerfile  README-SELFHOSTED-SUPABASE.md  README.md  docker-compose-supabase.yml  knip.json  package.json  start.sh  tsconfig.json
.github/codeql/: codeql-config.yml
.github/codeql/custom-queries/: RequestForgery.ql  qlpack.yml
.github/workflows/: codeql.yml  desktop-release.yml  release.yml  test.yml
apps/client/: eslint.config.js  index.html  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
apps/client/src/: index.css  main.tsx  types.ts  vite-env.d.ts
apps/client/src/components/: e2ee-setup-modal.tsx
apps/client/src/features/: store.ts
apps/client/src/helpers/: browser-logger.ts  download-file.ts  get-display-name.ts  get-file-url.ts  get-initials-from-name.ts  get-res-with-height.ts  giphy.ts  is-html-empty.ts  parse-trpc-errors.ts  storage.ts  strip-to-plain-text.ts  time-format.ts  upload-file.ts
apps/desktop/: forge.config.ts  package.json  tsconfig.json
apps/desktop/assets/: icon.icns
apps/desktop/native/audio-driver/: CMakeLists.txt
apps/desktop/native/audio-driver/PulseAudio.driver/Contents/: Info.plist
apps/desktop/native/audio-driver/src/: device.cpp  device.h  helper.cpp  plugin.cpp  plugin.h  ring-buffer.cpp  ring-buffer.h  types.h
apps/desktop/native/coreaudio-addon/: CMakeLists.txt  package.json
apps/desktop/native/coreaudio-addon/src/: addon.cpp  aggregate-device.cpp  aggregate-device.h  default-device.cpp  default-device.h  driver-detect.cpp  driver-detect.h
apps/desktop/scripts/: build-native.js  build.js  copy-assets.js  patch-macos.sh  postinstall.js
apps/desktop/src/: main.ts  preload.ts  server-selector.css  server-selector.html
apps/server/: .eslintrc.json  .gitignore  .prettierrc.json  bunfig.toml  drizzle.config.ts  package.json  tsconfig.json
apps/server/src/: config.ts  declarations.d.ts  index.ts  logger.ts  types.ts
data-test/interface/0.0.0-dev/: index.html  test file with spaces.html
data-test/plugins/plugin-a/: index.js  package.json
data-test/plugins/plugin-b/: index.js  package.json
data-test/plugins/plugin-invalid-package/: index.js  package.json
data-test/plugins/plugin-missing-entry/: package.json
data-test/plugins/plugin-no-onload/: index.js  package.json
data-test/plugins/plugin-no-unload/: package.json
data-test/plugins/plugin-throws-error/: package.json
data-test/plugins/plugin-with-events/: index.js
data-test/plugins/plugin-with-settings/: package.json
docker/: db-entrypoint.sh  generate-keys.ts  kong-supabase.yml  kong.yml  patch-migrations.ts  pulse-entrypoint.sh
docker/tests/: test-db-entrypoint.sh
(+740 files in other folders)
